# pds_24s2_tarea3

./: README.md  jack_client.cpp  jack_client.h  main.cpp  meson.build  parse_filter.tpp  passthrough_client.cpp  passthrough_client.h  prealloc_ringbuffer.h  prealloc_ringbuffer.tpp  sndfile_thread.cpp  sndfile_thread.h  ubuntu.sh  waitkey.cpp  waitkey.h
